# SpecNet

./: .gitignore  LICENSE  README.md
SpecNetServ/: CMakeLists.txt
SpecNetServ/assets/: settings.json
SpecNetServ/assets/x509/: 1891716358585508223
SpecNetServ/cmake/: functions.cmake  options.cmake  tests.cmake
SpecNetServ/src/: main.cpp
SpecNetServ/src/depend/config/hardcode/: confighardcode.cpp  confighardcode.h
SpecNetServ/src/depend/config/json/: configjson.cpp  configjson.h
SpecNetServ/src/depend/db/sqlite/: sqlitedb.cpp  sqlitedb.h
SpecNetServ/src/depend/encrypt/boringssl/: specssl.cpp  specssl.h
SpecNetServ/src/depend/file/base/: fileadapter.cpp  fileadapter.h
SpecNetServ/src/depend/file/old/: cfileadapter.cpp  cfileadapter.h
SpecNetServ/src/depend/log/spdlog/: spdlog.cpp  spdlog.h
SpecNetServ/src/depend/log/speclog/: speclog.cpp  speclog.h
SpecNetServ/src/depend/server/default/: defserver.cpp  defserver.h  iservcallback.h  smartsocket.cpp  smartsocket.h
SpecNetServ/src/depend/server/epoll/: epolsocket.cpp  epolsocket.h  epolsrv.cpp  epolsrv.h  epolworker.cpp  epolworker.h  esockholder.h  iepol.h  iservcallback.h
SpecNetServ/src/depend/server/select/: selectsocket.cpp  selectsocket.h  selectsrv.cpp  selectsrv.h  sockholder.h
SpecNetServ/src/depend/system/linux/: linuxservice.cpp  linuxservice.h  linuxsystem.cpp  linuxsystem.h
SpecNetServ/src/depend/system/windows/: windowsservice.cpp  windowsservice.h  windowssystem.cpp  windowssystem.h
SpecNetServ/src/depend/tools/: sajson.h  specjson.h  spectools.h
SpecNetServ/src/depend/tools/memory/: calloc.h  oncache.h  specstack.h
SpecNetServ/src/i/: ialloc.h  iconfig.h  idb.h  iencrypt.h  ifileadapter.h  ilib.h  ilibclass.h  ilog.h  iobject.h  ipack.h  iserver.h  isystem.h
SpecNetServ/src/spec/: speccontext.cpp  speccontext.h  specstatic.h
SpecNetServ/static/: decrepit.lib
SpecNetServ/tests/assets/avtr/pkey/1200531589062418660/: 0  1189369955094930216  1201815450909601009  1755766052803742575
SpecNetServ/tests/assets/avtr/pkey/1891716358585508223/: 0  1848174035979184476
SpecNetServ/tests/assets/avtr/pkey/2000000000000000000/: 0  1145740341031570368  1395809813882527485  1574203668488861772  1708305409019770006
SpecNetServ/tests/assets/avtr/x509/1200531589062418660/: 0  1189369955094930216  1201815450909601009  1755766052803742575
SpecNetServ/tests/assets/avtr/x509/1891716358585508223/: 0  1848174035979184476
SpecNetServ/tests/assets/avtr/x509/2000000000000000000/: 0  1145740341031570368  1395809813882527485  1574203668488861772  1708305409019770006
SpecNetServ/tests/assets/grp/pkey/: 1200531589062418660  1375513509061049236  2000000000000000000
SpecNetServ/tests/assets/grp/x509/: 1200531589062418660  1375513509061049236  2000000000000000000
SpecNetServ/tests/common/: testutils.h
SpecNetServ/tests/test1/: CMakeLists.txt  tests.cpp
SpecNetServ/tests/testclient/: CMakeLists.txt  main.cpp
SpecNetServ/tests/testsql/: CMakeLists.txt  dbclient.cpp  dbclient.h  testsql.cpp  testsql.h
SpecNetServ/tests/testssl/: CMakeLists.txt  selclient.cpp  selclient.h  sslclient.cpp  sslclient.h  testssl.cpp  testssl.h
SpecNetServ/tests/testssl/libs/: crypto.lib  decrepit.lib  ssl.lib
